fix: change close app settings

--- a/.github/issue-close-app.yml
+++ b/.github/issue-close-app.yml
@@ -7,17 +7,17 @@ issueConfigs:
   # Bug Report
   - "Bug Report"
   - "Problem"
-  - "What is expected to happen?"
-  - "What does actually happen?"
+  - "expected to happen"
+  - "ctually happen"
   - "Information"
   - "Command or Code"
   - "Environment, Platform, Device"
-  - "`cordova info` information"
+  - "cordova info"
   - "Checklist"
   - "I searched for existing GitHub issues"
   - "I updated all Cordova tooling to most recent version"
   - "I included all the necessary information above"
 
-caseInsensitive: true
+caseInsensitive: false
 
 label: "closed-by-bot"
