--- a/.github/issue-close-app.yml
+++ b/.github/issue-close-app.yml
@@ -1,5 +1,10 @@
 # Comment that will be sent if an issue is judged to be closed.
-comment: "This issue is closed because it does not meet our issue template. Please read and fill out the template."
+comment: >
+  This issue was automatically closed because it does not meet our issue template.
+
+  Please read the template and fill it out again.
+
+  You may replace the commented-out "PLACEMENT-HOLDER:" with your content, but do not remove anything else from the template.
 
 issueConfigs:
 
